kubernetes/overlays/homelab/argocd/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: argocd
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
